mudanca de email de contato

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="treat-wrapper caralho">
         <a class="treat-button porra">Bannnanas</a>
     </div>
-    <a class="contato" href="mailto:contato@bannnanas.com">contato@bannnanas.com</a>
+    <a class="contato" href="mailto:hey@bannnanas.com">hey@bannnanas.com</a>
     <script src="js/master.js"></script>
 </body>
 </html>
