--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bannnanas</title>
     <link rel="stylesheet" href="css/master.scss">
+    <!-- social metas -->
+    <meta property="og:title" content="Bannnanas">
+    <meta property="og:description" content="Design's gone bannnanas">
+    <meta property="og:image" content="img/social-image.png">
+    <meta property="og:url" content="https://bannnanas.com">
+    <meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
     <div class="treat-wrapper caralho">
